--- a/src/style.css
+++ b/src/style.css
@@ -88,9 +88,10 @@ strong {
   margin-top: 10px;
 }
 .weather-forecast-icon {
-  text-align: center;
-  margin-top: 10px;
-  font-size: 28px;
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
 }
 .weather-forecast-unit {
   color: #f65282;
